--- a/project tasveer.html
+++ b/project tasveer.html
@@ -139,7 +139,7 @@
     </div>
     <address>
       <u>Popular Collections</u>
-      <p>
+      <p><div class="card-container"></div>
         <div class ="card">
           <img src="a.jpg"alt="Man">
           <div class ="desc"></div>
@@ -176,6 +176,8 @@
 <img src="m.jpg"alt="Man">
 <div class ="desc"></div>
 </div>
+</div>
+
 
 
   </header>
